@@ -1,3 +1,8 @@
+2010-12-30  Andreas Windischer
+
+	* MonoCovMain.cs, MonoCovOptions.cs, gui/gtk/MonoCov.cs, gui/qt/MonoCov.cs, gui/gtk/MonoCov.cs, Makefile, configure:
+	Migrate from Mono.GetOptions (obsolete) to Mono.Options
+
 2010-12-28  Andreas Windischer
 
 	* gui/gtk/MonoCov.cs: catch file open error.
